move from fixed to relative header nav on small screens

--- a/sfa_dash/static/css/styles.css
+++ b/sfa_dash/static/css/styles.css
@@ -1,5 +1,20 @@
 /* Bootstrap overrides */
-
+@media (min-width: 768px){
+  .fixed-top{
+    position: fixed;
+  }
+}
+@media (max-width: 767px){
+  .fixed-top{
+    position: relative;
+  }
+}
+.fixed-top{
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 1030;
+}
 table.table th{
   border-top: unset;
 }
@@ -31,7 +46,7 @@ main {
 }
 @media (max-width: 767px){
   main{
-    margin-top: 12rem;
+    margin-top: 0;
   }
 }
 .menu-list{
